.apex/unpackaged/objects/abc__c.object
<CustomObject>
    <fields>
        <fullName>Account_S__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>abcs (Account)</relationshipLabel>
        <relationshipName>abcs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CHECKBOX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHECKBOX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CURRENCYSUM__c</fullName>
        <formula>Currency__c + currency2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CURRENCYSUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAN_CARD__c</fullName>
        <label>PAN CARD</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SSN_NO__c</fullName>
        <encrypted>true</encrypted>
        <label>SSN NO</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_SSN__c</fullName>
        <label>UK SSN</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>abcpick__c</fullName>
        <label>abcpick</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CHECKBOX__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-None-</fullName>
                    <default>true</default>
                    <label>-None-</label>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>currency2__c</fullName>
        <label>currency2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currency3Total__c</fullName>
        <label>currency3Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>customer_s__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>abcs</relationshipLabel>
        <relationshipName>abcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>encrypt__c</fullName>
        <externalId>true</externalId>
        <label>encrypt</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>num1__c</fullName>
        <externalId>true</externalId>
        <label>num1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>text2__c</fullName>
        <label>text2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>abc</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>abcpick__c</columns>
        <columns>SSN_NO__c</columns>
        <columns>Text1__c</columns>
        <columns>text2__c</columns>
        <columns>UK_SSN__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>abc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>abcs</pluralLabel>
    <recordTypes>
        <fullName>INDIA_RT</fullName>
        <active>true</active>
        <label>INDIA RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_RT</fullName>
        <active>true</active>
        <label>UK RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_RT</fullName>
        <active>true</active>
        <label>USA RT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Amount_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(Currency__c &gt;100000,currency2__c &gt;10000,contains( SSN_NO__c,&apos;1234&apos;)))</errorConditionFormula>
        <errorMessage>Amount should be greater than 100K</errorMessage>
    </validationRules>
</CustomObject>